# etdk

./: .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  SECURITY.md
.github/: FUNDING.yml
docs/: DEVELOPER_GUIDE.md  ROADMAP.md
include/: etdk.h
src/: crypto.c  main.c  platform.c
